roles/kubernetes/kubernetes-applications/domoticz/templates/domoticz.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: domoticz
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domoticz
  namespace: domoticz
  labels:
    app: domoticz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domoticz
  template:
    metadata:
      labels:
        app: domoticz
    spec:
      containers:
        - name: domoticz
          image: linuxserver/domoticz:latest
          imagePullPolicy: "Always"
          securityContext:
            privileged: true
          ports:
            - containerPort: 80
          volumeMounts:
            - name: domoticz
              mountPath: "/config"
            - name: ttyusb0
              mountPath: "/dev/serial/by-id/usb-Cartelectronic_Interface_USB_1_TIC_DA3P5NRA-if00-port0"
            - name: ttyusb1
              mountPath: "/dev/serial/by-id/usb-RFXCOM_RFXtrx433XL_DO3MHTT3-if00-port0"
      volumes:
        - name: domoticz
          persistentVolumeClaim:
            claimName: domoticz
        - name: ttyusb0
          hostPath:
            path: /dev/serial/by-id/usb-Cartelectronic_Interface_USB_1_TIC_DA3P5NRA-if00-port0
        - name: ttyusb1
          hostPath:
            path: /dev/serial/by-id/usb-RFXCOM_RFXtrx433XL_DO3MHTT3-if00-port0
      nodeSelector:
        kubernetes.io/hostname: domotique
---
apiVersion: v1
kind: Service
metadata:
  name: domoticz
  namespace: domoticz
spec:
  selector:
    app: domoticz
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 1443
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: domoticz
  namespace: domoticz
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-k8shomemade
spec:
  rules:
    - host: domoticz.jugou28.com
      http:
        paths:
          - path: /
            backend:
              serviceName: domoticz
              servicePort: 80
  tls:
    - hosts:
        - domoticz.jugou28.com
      secretName: domoticz-cert
